--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -129,7 +129,7 @@
 .index-cont {
   padding-top: 0px;
   margin-top: 0px;
-  /* background-color: black; */
+  /* background-color: red; */
 }
 
 .header-section {
@@ -220,7 +220,7 @@
   align-items: center;
   justify-content: center;
   /* background-size: cover; */
-  height: 150vh;
+  height: 78vh;
   background-repeat: no-repeat;
   margin-top: 1vh;
   margin-left: 3vw;
@@ -230,7 +230,7 @@
   align-items: center;
   justify-content: center;
   /* background-size: cover; */
-  height: 90vh;
+  height: 78vh;
   background-repeat: no-repeat;
   margin-top: 20vh;
   margin-left: 6vw;
@@ -240,7 +240,7 @@
   align-items: center;
   justify-content: center;
   /* background-size: cover; */
-  height: 77vh;
+  height: 74vh;
   margin-top: 1vh;
   background-repeat: no-repeat;
 
@@ -254,6 +254,40 @@
   text-align: center;
 }
 .slide {
-  background-color: blanchedalmond;
   height: 78vh;
+
+  margin: 15px;
+  text-align: center;
+  font-size: 20px;
+  border: 1px solid;
+  padding: 10px;
+
+  box-shadow: 10px 10px gray;
+
+  background-color: black;
+  color: black;
+}
+.card {
+  border: 5px blanchedalmond solid;
+
+  width: 25vw;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  margin-left: 30vw;
+  text-align: center;
+  background-color: black;
+  color: blanchedalmond;
+}
+.image {
+  height: 30vh;
+  width: 20vw;
+  border: 2px solid white;
+}
+.emp-back {
+  background-color: blanchedalmond;
+  border: 2px black solid;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
